Fixed white space gap under logotype

--- a/css/style.css
+++ b/css/style.css
@@ -721,7 +721,7 @@ p.gold-txt {
   }
 
   header {
-    padding: 5px 10px;
+    padding: 4px 10px;
   }
 
   div.container {
